--- a/react-frontend/src/styles/Header.module.css
+++ b/react-frontend/src/styles/Header.module.css
@@ -1,35 +1,37 @@
-.Header {
+.background {
     background-color: #6B8F71;
 }
 
-h1 {
+#LogoText {
     float: left;
-    padding: 8px 10px;
+    margin: 15px 20px 0px 10px;
     color: white;
+    font-size: 40px;
 }
 
 /* Search */
-input {
-    padding: 10px;
+.SearchBar {
+    padding: 12px;
+    margin-top: 5px;
+    width: 60%;
     border-radius: 7px;
     border: 0;
 }
-
-
 /* Links */
-ul {
+.links {
     list-style-type: none;
     margin: 0;
+    margin-top: 20px;
     padding: 0;
     overflow: hidden;
     background-color: #6B8F71;
   }
   
-  li {
+.links li {
     float: left;
   }
   
-  li a {
+.links li a {
     display: block;
     color: white;
     text-align: center;
@@ -37,7 +39,8 @@ ul {
     text-decoration: none;
   }
   
-  li a:hover {
+.links li a:hover {
     background-color: #AAD2BA;
     color: black;
   }
+
