--- a/react-frontend/src/styles/Footer.module.css
+++ b/react-frontend/src/styles/Footer.module.css
@@ -1,3 +1,29 @@
-.Footer {
+.footer {
     background-color: #6B8F71;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+.links {
+    list-style-type: none;
+    padding: 0;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.links li {
+    display: inline;
+}
+
+.links li a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.links li a:hover {
+    text-decoration: underline;
 }
