added horizontal lists

--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -7,7 +7,15 @@
     margin-left: 10%;
     margin-right: 10%;
   }
-  
+
 .App {
     font-family: 'Inter', sans-serif;
+}
+
+.list {
+    margin-top: 30px;
+}
+
+.item-content {
+
 }
