Made logo in header link to homepage

--- a/react-frontend/src/styles/Header.module.css
+++ b/react-frontend/src/styles/Header.module.css
@@ -4,9 +4,10 @@
 
 #LogoText {
     float: left;
-    margin: 15px 20px 0px 10px;
+    margin: 0px 20px 0px 10px;
     color: white;
     font-size: 40px;
+    text-decoration: none;
 }
 
 /* Search */
